<?xml version="1.0"?>
<package format="2">
  <name>planning</name>
  <version>0.1.0</version>
  <description>3D Navigation Algorithm</description>

  <maintainer email="zbh11808@gmail.com">zbh</maintainer>
  <author>zbh</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>champ</depend>
  <depend>champ_msgs</depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_config</exec_depend>
  <exec_depend>aloam_velodyne</exec_depend>
  
</package>
